--- a/site/aliases/templates/aliases.erb
+++ b/site/aliases/templates/aliases.erb
@@ -93,7 +93,7 @@ support:	postmaster
 decode:		root
 
 # Person who should get root's mail
-<% if @admin %->
+<% if @admin then %->
 root: <%= @admin %>
 <% else %->
 #root:		marc
