--- a/site/nginx/templates/nginx.conf.erb
+++ b/site/nginx/templates/nginx.conf.erb
@@ -5,9 +5,9 @@
 user              nginx;
 worker_processes  1;
 
-error_log  <% @logdir %>;
-#error_log  <% @logdir %>/error.log  notice;
-#error_log  <% @logdir %>/error.log  info;
+error_log  <%= @logdir %>;
+#error_log  <%= @logdir %>/error.log  notice;
+#error_log  <%= @logdir %>/error.log  info;
 
 pid        /var/run/nginx.pid;
 
@@ -18,14 +18,14 @@ events {
 
 
 http {
-    include       <% @configdir %>/mime.types;
+    include       <%= @configdir %>/mime.types;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  <% @logdir %>/nginx/access.log  main;
+    access_log  <%= @logdir %>/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -35,8 +35,8 @@ http {
 
     #gzip  on;
 
-    # Load config files from the <% @confdir %>/conf.d directory
+    # Load config files from the <%= @confdir %>/conf.d directory
     # The default server is in conf.d/default.conf
-    include <% @confdir %>/conf.d/*.conf;
+    include <%= @confdir %>/conf.d/*.conf;
 
 }
