--- a/site/nginx/templates/nginx.conf.erb
+++ b/site/nginx/templates/nginx.conf.erb
@@ -5,7 +5,7 @@
 user              nginx;
 worker_processes  1;
 
-error_log  <%= @logdir %>;
+error_log  <%= @logdir %>/error.log;
 #error_log  <%= @logdir %>/error.log  notice;
 #error_log  <%= @logdir %>/error.log  info;
 
@@ -18,7 +18,7 @@ events {
 
 
 http {
-    include       <%= @configdir %>/mime.types;
+    include       <%= @confdir %>/mime.types;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
